# pfinance

./: CONTRIBUTING.md  LICENSE  README.md  acb.py  functions.py  main.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml  python-app.yml  python-publish.yml
pfinance/: __init__.py  conversion.py  depreciation.py  functions.py  general.py  securities.py  time_value.py
py-finance/: functions.py
tests/: test_functions.py
