[metadata]
name = pfinance
description = Financial mathematics library
author = Julian Pettit
author_email = julian.s.pettit@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/j-pettit/pfinance/
project_urls =
    Source = https://github.com/j-pettit/pfinance/
    Tracker = https://github.com/j-pettit/pfinance/issues
keywords =
    finance
    mathematics

[options]
packages = find:
setup_requires = 
    pytest-runner
    setuptools_scm
tests_require =
    pytest
test_suite = tests
